--- a/config/charybdis-layouts.dtsi
+++ b/config/charybdis-layouts.dtsi
@@ -1,16 +1,14 @@
 #include <physical_layouts.dtsi>
 
 / {
-    charybdis_physical_layout: charybdis_physical_layout {
+    charybdis_mini_physical_layout: charybdis_mini_physical_layout {
         compatible = "zmk,physical-layout";
         display-name = "Charybdis 3x6";
 
         kscan = <&kscan0>;
-        transform = <&default_transform>;
+        transform = <&matrix_transform0>;
 
-        keys
-            // Left Half - Main Keys
-            //                       w   h    x    y     rot    rx    ry
+        keys  //                     w   h    x    y     rot    rx    ry
             = <&key_physical_attrs 100 100    0   38       0     0     0>
             , <&key_physical_attrs 100 100  100   38       0     0     0>
             , <&key_physical_attrs 100 100  200   12       0     0     0>
@@ -29,9 +27,6 @@
             , <&key_physical_attrs 100 100  300  100       0     0     0>
             , <&key_physical_attrs 100 100  400  112       0     0     0>
             , <&key_physical_attrs 100 100  500  112       0     0     0>
-
-            // Right Half - Main Keys
-            //                       w   h    x    y     rot    rx    ry
             , <&key_physical_attrs 100 100  900  112       0     0     0>
             , <&key_physical_attrs 100 100 1000  112       0     0     0>
             , <&key_physical_attrs 100 100 1100  100       0     0     0>
@@ -50,14 +45,57 @@
             , <&key_physical_attrs 100 100 1200  212       0     0     0>
             , <&key_physical_attrs 100 100 1300  238       0     0     0>
             , <&key_physical_attrs 100 100 1400  238       0     0     0>
-
-            // Thumb Clusters
-            //                       w   h    x    y     rot    rx    ry
             , <&key_physical_attrs 100 100  348  314       0     0     0>
             , <&key_physical_attrs 100 100  348  314    1500   398   790>
             , <&key_physical_attrs 100 100  348  320    3000   398   790>
             , <&key_physical_attrs 100 100 1052  320 (-3000)  1102   790>
             , <&key_physical_attrs 100 100 1052  314 (-1500)  1102   790>
+            ;
+    };
+
+    charybdis_nano_physical_layout: charybdis_nano_physical_layout {
+        compatible = "zmk,physical-layout";
+        display-name = "Charybdis 3x5";
+
+        kscan = <&kscan1>;
+        transform = <&matrix_transform1>;
+
+        keys  //                     w   h    x    y     rot    rx    ry
+            = <&key_physical_attrs 100 100    0   57       0     0     0>
+            , <&key_physical_attrs 100 100  100   12       0     0     0>
+            , <&key_physical_attrs 100 100  200    0       0     0     0>
+            , <&key_physical_attrs 100 100  300   12       0     0     0>
+            , <&key_physical_attrs 100 100  400   12       0     0     0>
+            , <&key_physical_attrs 100 100  800   12       0     0     0>
+            , <&key_physical_attrs 100 100  900   12       0     0     0>
+            , <&key_physical_attrs 100 100 1000    0       0     0     0>
+            , <&key_physical_attrs 100 100 1100   12       0     0     0>
+            , <&key_physical_attrs 100 100 1200   57       0     0     0>
+            , <&key_physical_attrs 100 100    0  158       0     0     0>
+            , <&key_physical_attrs 100 100  100  112       0     0     0>
+            , <&key_physical_attrs 100 100  200  100       0     0     0>
+            , <&key_physical_attrs 100 100  300  112       0     0     0>
+            , <&key_physical_attrs 100 100  400  112       0     0     0>
+            , <&key_physical_attrs 100 100  800  112       0     0     0>
+            , <&key_physical_attrs 100 100  900  112       0     0     0>
+            , <&key_physical_attrs 100 100 1000  100       0     0     0>
+            , <&key_physical_attrs 100 100 1100  112       0     0     0>
+            , <&key_physical_attrs 100 100 1200  158       0     0     0>
+            , <&key_physical_attrs 100 100    0  258       0     0     0>
+            , <&key_physical_attrs 100 100  100  212       0     0     0>
+            , <&key_physical_attrs 100 100  200  200       0     0     0>
+            , <&key_physical_attrs 100 100  300  212       0     0     0>
+            , <&key_physical_attrs 100 100  400  212       0     0     0>
+            , <&key_physical_attrs 100 100  800  212       0     0     0>
+            , <&key_physical_attrs 100 100  900  212       0     0     0>
+            , <&key_physical_attrs 100 100 1000  200       0     0     0>
+            , <&key_physical_attrs 100 100 1100  212       0     0     0>
+            , <&key_physical_attrs 100 100 1200  258       0     0     0>
+            , <&key_physical_attrs 100 100  248  312       0     0     0>
+            , <&key_physical_attrs 100 100  248  312    1500   298   790>
+            , <&key_physical_attrs 100 100  248  312    3000   298   790>
+            , <&key_physical_attrs 100 100  952  312 (-3000)  1002   790>
+            , <&key_physical_attrs 100 100  952  312 (-1500)  1002   790>
             ;
     };
 };
