--- a/boards/shields/charybdis-bt/charybdis.dtsi
+++ b/boards/shields/charybdis-bt/charybdis.dtsi
@@ -5,10 +5,10 @@
     // chosen {
     //     zmk,kscan = &kscan0;
     //     zmk,matrix_transform = &default_transform;
+    //     zmk,physical-layout = &charybdis_physical_layout;
     // };
     chosen {
         zmk,kscan = &kscan0;
-        zmk,physical-layout = &charybdis_physical_layout;
     };
 
     vbatt: vbatt {
