--- a/boards/shields/charybdis-bt/charybdis_right.conf
+++ b/boards/shields/charybdis-bt/charybdis_right.conf
@@ -6,7 +6,7 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 
 ## ZMK Studio - Move this to config/charybdis.conf when dongle works with ZMK Studio
 ## https://zmk.dev/docs/features/studio
-CONFIG_ZMK_STUDIO=y
+CONFIG_ZMK_STUDIO=n
 ## https://zmk.dev/docs/config/studio
 CONFIG_ZMK_STUDIO_LOCKING=y
 CONFIG_ZMK_STUDIO_LOCK_ON_DISCONNECT=y
