--- a/boards/shields/charybdis-bt/charybdis.dtsi
+++ b/boards/shields/charybdis-bt/charybdis.dtsi
@@ -9,6 +9,7 @@
     // };
     chosen {
         zmk,kscan = &kscan0;
+	zmk,physical-layout = &charybdis_physical_layout;
     };
 
     vbatt: vbatt {
