--- a/config/charybdis-layouts.dtsi
+++ b/config/charybdis-layouts.dtsi
@@ -6,7 +6,7 @@
         display-name = "Charybdis 3x5";
 
         kscan = <&kscan0>;
-        transform = <&five_column_transform>;
+        transform = <&default_transform>;
 
         keys  //                     w   h    x    y     rot    rx    ry
             = <&key_physical_attrs 100 100    0   57       0     0     0>
