--- a/boards/shields/charybdis-bt/charybdis_left.conf
+++ b/boards/shields/charybdis-bt/charybdis_left.conf
@@ -5,3 +5,7 @@ CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=y
 CONFIG_ZMK_STUDIO_LOCK_ON_DISCONNECT=y
 CONFIG_ZMK_STUDIO_TRANSPORT_BLE_PREF_LATENCY=5
+
+&default_transform {
+	col-offset = <1>;
+};
