--- a/build.yaml
+++ b/build.yaml
@@ -19,34 +19,34 @@
 ---
 include:
   # QWERTY BT
-  - board: nice_nano_v2
-    shield: charybdis_left
-    keymap: qwerty
-    format: bt
-    artifact-name: charybdis_qwerty_left
-  - board: nice_nano_v2
-    shield: charybdis_right
-    keymap: qwerty
-    format: bt
-    artifact-name: charybdis_qwerty_right
-    snippet: studio-rpc-usb-uart
-
-  # QWERTY Dongle
 #  - board: nice_nano_v2
 #    shield: charybdis_left
 #    keymap: qwerty
-#    format: dongle
-#    artifact-name: charybdis_qwerty_dongle_left
+#    format: bt
+#    artifact-name: charybdis_qwerty_left
 #  - board: nice_nano_v2
 #    shield: charybdis_right
 #    keymap: qwerty
-#    format: dongle
-#    artifact-name: charybdis_qwerty_dongle_right
-#  - board: nice_nano_v2
-#    shield: charybdis_dongle
-#    keymap: qwerty
-#    format: dongle
-#    artifact-name: charybdis_qwerty_dongle
+#    format: bt
+#    artifact-name: charybdis_qwerty_right
+#    snippet: studio-rpc-usb-uart
+
+  # QWERTY Dongle
+  - board: nice_nano_v2
+    shield: charybdis_left
+    keymap: qwerty
+    format: dongle
+    artifact-name: charybdis_qwerty_dongle_left
+  - board: nice_nano_v2
+    shield: charybdis_right
+    keymap: qwerty
+    format: dongle
+    artifact-name: charybdis_qwerty_dongle_right
+  - board: nice_nano_v2
+    shield: charybdis_dongle
+    keymap: qwerty
+    format: dongle
+    artifact-name: charybdis_qwerty_dongle
 
   # Firmware Reset
   - board: nice_nano_v2
