--- a/config/charybdis.conf
+++ b/config/charybdis.conf
@@ -9,8 +9,8 @@ CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 ## Power Management Config
 ## https://zmk.dev/docs/config/power
 CONFIG_ZMK_SLEEP=y
-# CONFIG_ZMK_IDLE_TIMEOUT=30000
-# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
 CONFIG_ZMK_EXT_POWER=y
 ## https://docs.zephyrproject.org/2.7.5/reference/kconfig/CONFIG_PM_DEVICE.html
 CONFIG_PM_DEVICE=y
@@ -32,4 +32,5 @@ CONFIG_INPUT=y
 CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=512
 
 ## https://github.com/zmkfirmware/zmk/pull/2477
+
 # CONFIG_ZMK_MOUSE_SMOOTH_SCROLLING=y
