--- a/build.yaml
+++ b/build.yaml
@@ -47,6 +47,7 @@ include:
     keymap: qwerty
     format: dongle
     artifact-name: charybdis_qwerty_dongle
+    snippet: studio-rpc-usb-uart
 
   # Firmware Reset
   - board: nice_nano_v2
