--- a/boards/shields/charybdis-dongle/charybdis.dtsi
+++ b/boards/shields/charybdis-dongle/charybdis.dtsi
@@ -5,6 +5,7 @@
     chosen {
         zmk,kscan = &kscan0;
         zmk,matrix_transform = &default_transform;
+		zmk,physical-layout = &charybdis_physical_layout;
     };
 
     // ZMK Studio
@@ -50,3 +51,4 @@
     };
 
 };
+
