--- a/boards/shields/charybdis-dongle/charybdis.dtsi
+++ b/boards/shields/charybdis-dongle/charybdis.dtsi
@@ -4,7 +4,7 @@
 / {
     chosen {
         zmk,kscan = &kscan0;
-        zmk,matrix_transform = &default_transform;
+#        zmk,matrix_transform = &default_transform;
 		zmk,physical-layout = &charybdis_physical_layout;
     };
 
@@ -51,4 +51,5 @@
     };
 
 };
+
 
