--- a/build.yaml
+++ b/build.yaml
@@ -19,19 +19,19 @@
 ---
 include:
   # QWERTY BT
-#  - board: nice_nano_v2
-#    shield: charybdis_left
-#    keymap: qwerty
-#    format: bt
-#    artifact-name: charybdis_qwerty_left
-#  - board: nice_nano_v2
-#    shield: charybdis_right
-#    keymap: qwerty
-#    format: bt
-#    artifact-name: charybdis_qwerty_right
-#    snippet: studio-rpc-usb-uart
+  - board: nice_nano_v2
+    shield: charybdis_left
+    keymap: qwerty
+    format: bt
+    artifact-name: charybdis_qwerty_left
+  - board: nice_nano_v2
+    shield: charybdis_right
+    keymap: qwerty
+    format: bt
+    artifact-name: charybdis_qwerty_right
+    snippet: studio-rpc-usb-uart
 
-  # QWERTY Dongle
+#  # QWERTY Dongle
   - board: nice_nano_v2
     shield: charybdis_left
     keymap: qwerty
