--- a/config/charybdis.conf
+++ b/config/charybdis.conf
@@ -6,14 +6,20 @@ CONFIG_ZMK_BLE=y
 ## https://zmk.dev/docs/config/bluetooth#kconfig
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 
-## Power Management Config
-## https://zmk.dev/docs/config/power
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_TIMEOUT=30000
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
-CONFIG_ZMK_EXT_POWER=y
-## https://docs.zephyrproject.org/2.7.5/reference/kconfig/CONFIG_PM_DEVICE.html
-CONFIG_PM_DEVICE=y
+
+## Logging for Trackball Debug
+CONFIG_LOG=y
+CONFIG_ZMK_LOG_LEVEL=4  # Max detail: Catches SPI/power events without spam
+
+## Power Tweaks for Testing (Disable Sleep to Isolate)
+# CONFIG_ZMK_SLEEP=y  # Comment this out temporarily
+# CONFIG_ZMK_IDLE_TIMEOUT=30000  # And these—keeps it always-on
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
+
+## Ensure Device Power Handles SPI Periph
+CONFIG_PM_DEVICE=y  # Already there, but confirm—gates SPI if low power
+CONFIG_SPI=y  # Bump if not; ensures no gating on bus
+
 
 ## Battery Level
 ## https://zmk.dev/docs/config/battery
@@ -34,3 +40,4 @@ CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=512
 ## https://github.com/zmkfirmware/zmk/pull/2477
 
 # CONFIG_ZMK_MOUSE_SMOOTH_SCROLLING=y
+
