--- a/config/charybdis.conf
+++ b/config/charybdis.conf
@@ -8,17 +8,20 @@ CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 
 
 ## Logging for Trackball Debug
-CONFIG_LOG=y
-CONFIG_ZMK_LOG_LEVEL=4  # Max detail: Catches SPI/power events without spam
+CONFIG_ZMK_USB_LOGGING=y
+CONFIG_ZMK_LOG_LEVEL=4
+# Max detail: Catches SPI/power events without spam
 
 ## Power Tweaks for Testing (Disable Sleep to Isolate)
-# CONFIG_ZMK_SLEEP=y  # Comment this out temporarily
-# CONFIG_ZMK_IDLE_TIMEOUT=30000  # And these—keeps it always-on
+# CONFIG_ZMK_SLEEP=y
+# CONFIG_ZMK_IDLE_TIMEOUT=30000
 # CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
 
 ## Ensure Device Power Handles SPI Periph
-CONFIG_PM_DEVICE=y  # Already there, but confirm—gates SPI if low power
-CONFIG_SPI=y  # Bump if not; ensures no gating on bus
+CONFIG_PM_DEVICE=y
+# Already there, but confirm—gates SPI if low power
+CONFIG_SPI=y
+# Bump if not; ensures no gating on bus
 
 
 ## Battery Level
@@ -40,4 +43,5 @@ CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=512
 ## https://github.com/zmkfirmware/zmk/pull/2477
 
 # CONFIG_ZMK_MOUSE_SMOOTH_SCROLLING=y
+
 
