--- a/config/charybdis.conf
+++ b/config/charybdis.conf
@@ -7,22 +7,17 @@ CONFIG_ZMK_BLE=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 
 
-## Logging for Trackball Debug
+## Power Management Config
+## https://zmk.dev/docs/config/power
+## CONFIG_ZMK_SLEEP=y
+## CONFIG_ZMK_IDLE_TIMEOUT=30000
+## CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
+CONFIG_ZMK_EXT_POWER=y
+## https://docs.zephyrproject.org/2.7.5/reference/kconfig/CONFIG_PM_DEVICE.html
+CONFIG_PM_DEVICE=y
+
 CONFIG_ZMK_USB_LOGGING=y
 CONFIG_ZMK_LOG_LEVEL=4
-# Max detail: Catches SPI/power events without spam
-
-## Power Tweaks for Testing (Disable Sleep to Isolate)
-# CONFIG_ZMK_SLEEP=y
-# CONFIG_ZMK_IDLE_TIMEOUT=30000
-# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
-
-## Ensure Device Power Handles SPI Periph
-CONFIG_PM_DEVICE=y
-# Already there, but confirm—gates SPI if low power
-CONFIG_SPI=y
-# Bump if not; ensures no gating on bus
-
 
 ## Battery Level
 ## https://zmk.dev/docs/config/battery
