--- a/build.yaml
+++ b/build.yaml
@@ -19,30 +19,30 @@
 ---
 include:
   # QWERTY BT
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: charybdis_left
     keymap: qwerty
     format: bt
     artifact-name: charybdis_qwerty_left
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: charybdis_right
     keymap: qwerty
     format: bt
     artifact-name: charybdis_qwerty_right
-  #  snippet: studio-rpc-usb-uart
+    snippet: studio-rpc-usb-uart
 
 #  # QWERTY Dongle
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: charybdis_left
     keymap: qwerty
     format: dongle
     artifact-name: charybdis_qwerty_dongle_left
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: charybdis_right
     keymap: qwerty
     format: dongle
     artifact-name: charybdis_qwerty_dongle_right
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: charybdis_dongle
     keymap: qwerty
     format: dongle
@@ -50,7 +50,7 @@ include:
     snippet: studio-rpc-usb-uart
 
   # Firmware Reset
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: settings_reset
     format: reset
     artifact-name: firmware_reset_nano_v2
